--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^6.0.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
@@ -20,7 +21,11 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "angular4-fusioncharts": "^1.0.0",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
+    "fusioncharts": "^3.12.2",
+    "ng2-charts": "^1.6.0",
     "ngx-toastr": "latest",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
