--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^6.0.6",
     "@angular/platform-browser-dynamic": "^6.0.6",
     "@angular/router": "^6.0.6",
+    "angular-chart.js": "^1.1.1",
     "angular4-fusioncharts": "^1.0.0",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.7",
